tests/fsharp/typeProviders/negTests/neg6.bsl

neg6.fsx(8,11,8,25): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(8,11,8,25): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(11,11,11,28): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(11,11,11,28): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(14,11,14,33): typecheck error FS3063: Cannot inherit from erased provided type

neg6.fsx(14,11,14,33): typecheck error FS3063: Cannot inherit from erased provided type
